--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "next": "latest",
+    "clsx": "^1.1.1",
+    "next": "canary",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.3.12",
     "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.3",
+    "eslint": "8.2.0",
+    "eslint-config-next": "12.0.4",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
